fixed images that had default spacing. added new css to credits page.

--- a/Project-CountryWebsite/0-global.css
+++ b/Project-CountryWebsite/0-global.css
@@ -165,6 +165,7 @@ nav a {
     font-size: 1.5rem;
     margin: 0 auto;
     text-align: center; 
+    
 }
  
 /* <--- Help From ChatGPT ---> */
@@ -173,6 +174,7 @@ nav a {
     object-position: center;
     width: 100%;
     height: 60vh;
+    display: block;
 } /* <--------------> */
 
 
@@ -216,8 +218,6 @@ footer {
     text-align: center;
     margin: 20px;
 }
-
-
 
 
 
